# shebanger

./: CHANGELOG.md  README.md  default.nix  hie.yaml  shebanger.cabal  test.sh
.github/workflows/: ci.yaml
app/: Main.hs
nix/: default.nix  overlay.nix
src/: Shebanger.hs
src/Shebanger/: Cli.hs
test/: Test.hs
test/Test/: Shebanger.hs
